# RAG-WITH-DEEPSEEK

./: README.MD  backend.py  ragchat.db
db/: chroma.sqlite3
rust-rag-backend/: .env  Cargo.toml  README.md
rust-rag-backend/src/: api.rs  db.rs  embedding.rs  main.rs  models.rs  utils.rs
