[package]
name = "rust-rag-backend"
version = "0.1.0"
edition = "2021"
authors = ["RAG Chatbot"]

[dependencies]
# Server web
actix-web = "4.4"
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
tokio = { version = "1.33", features = ["full"] }
futures = "0.3"

# Serialisasi dan deserialisasi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Embedding dan ML
rust-bert = "0.21"
ndarray = "0.15"
hnswlib-rs = "0.1"

# Processing PDF dan CSV
pdf-extract = "0.7"
csv = "1.2"

# Logging dan konfigurasi
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"

# Utilitas
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18" 